test-net-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-2
  namespace: demo
spec:
  podSelector:
    matchLabels:
      kubedb.com/podname: hot-postgres-2
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr:   192.168.0.0/16  
        except:
        - 192.168.162.0/24
    # ports:
    # - protocol: TCP
    #   port: 5432
    # - protocol: TCP
    #   port: 12345
    # - protocol: TCP
    #   port: 12380
  egress:
  - to:
    - ipBlock:
        cidr:   192.168.0.0/16  
        except:
        - 192.168.162.0/24
    # ports:
    # - protocol: TCP
    #   port: 5432
    # - protocol: TCP
    #   port: 12345
    # - protocol: TCP
    #   port: 12380
